Address JWT issuer review comments